Fixed: Bug 47220 - [LG G4, Android 6.0] - Drive: Icon of parent folder is cut off

--- a/ui/apps/themes/components/listview.less
+++ b/ui/apps/themes/components/listview.less
@@ -149,6 +149,20 @@
     }
 }
 
+.smartphone {
+    .list-view-control {
+        .toolbar {
+            a:not(.breadcrumb-link) {
+                &:focus, &:focus i {
+                    color: inherit;
+                    outline: inherit;
+                    background-color: inherit;
+                }
+            }
+        }
+    }
+}
+
 .list-view {
 
     height: 100%;
